--- a/pagina-cadastro/index.html
+++ b/pagina-cadastro/index.html
@@ -15,7 +15,7 @@
                 <div class="header_left">Logomarca</div>
                 <div class="header_right">
                     <div class="header_links">
-                        <div><a href="../pagina-login/index.html">Entrar</a></div>
+                        <div><a href="../index.html">Entrar</a></div>
                         <!-- <div><a href="">Cadastrar</a></div> -->
                     </div>
                     <div onclick="abrirMenu()" class="menu" id="menu">
@@ -46,7 +46,7 @@
                         </div>
                         <div class="login_info">
                             <p>Cadastre-se para poder criar sua conta</p>
-                            <p>Ou se já possui uma conta, <a href="../pagina-login/index.html">Entre</a></p>
+                            <p>Ou se já possui uma conta, <a href="../index.html">Entre</a></p>
                         </div>
                     </div>
                     <div class="login_right">
